# dify-client-rust

./: .env  .env.template  Cargo.toml  README.md
src/: lib.rs
tests/: chat.rs
