[package]
name = "dify-client-rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/czn574775237/dify-client-rust.git"

[dependencies]
anyhow = "1.0.92"
futures-util = "0.3.31"
reqwest = { version = "0.12.9", features = ["multipart", "json", "stream"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt", "macros"] }
tokio-util = { version = "0.7.12" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }


[dev-dependencies]
dotenvy = "0.15.7"
